[tool.poetry]
package-mode = false
name = "blaise_export_reporting_tool"
version = "0.1.0"
description = ""
authors = ["Blaise Team"]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.2"
google-cloud-datastore = "^2.21.0"
mysql-connector-python = "^9.4.0"
requests = "^2.32.5"
functions-framework = "^3.9.2"
numpy = "^2.3.3"
pandas = "^2.3.2"
google-cloud = "^0.34.0"
google-cloud-storage = "^3.3.1"
python-dotenv = "^1.1.1"
requests-mock = "^1.9.3"
google-cloud-tasks = "^2.19.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
coverage = "^7.10.6"
black = "^25.1.0"
pytest-cov = "^7.0.0"
pytest-flask = "^1.3.0"
pytest-mock = "^3.14.0"
pytest-lazy-fixtures = "^1.3.4"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.18.1"
types-requests = "^2.32.4.20250809"
types-python-dateutil = "^2.9.0.20250822"
behave = "^1.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"
profile = "black"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true