[tool.poetry]
package-mode = false
name = "blaise_export_reporting_tool"
version = "0.1.0"
description = ""
authors = ["Blaise Team"]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.2"
google-cloud-datastore = "^2.21.0"
mysql-connector-python = "^9.5.0"
requests = "^2.32.5"
functions-framework = "^3.10.0"
numpy = "^2.3.5"
pandas = "^2.3.3"
google-cloud-storage = "^3.7.0"
python-dotenv = "^1.2.1"
google-cloud-tasks = "^2.20.0"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
coverage = "^7.13.0"
black = "^25.12.0"
pytest-cov = "^7.0.0"
pytest-flask = "^1.3.0"
pytest-mock = "^3.15.1"
pytest-lazy-fixtures = "^1.4.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.0"
types-requests = "^2.32.4.20250913"
types-python-dateutil = "^2.9.0.20251115"
behave = "^1.3.3"
deptry = "^0.24.0"
vulture = "^2.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"
profile = "black"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true